--- a/pepeizqs deals web/Pages/Componentes/Interfaz/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/Cabecera.razor
@@ -489,7 +489,7 @@ else
     {
         if (usuarioLogeado == true)
         {
-            usuarioPatreon = Herramientas.Patreon.VerificarComprobacion(usuario.PatreonLastCheck);
+            usuarioPatreon = Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck);
 
             if (string.IsNullOrEmpty(usuario.SteamGames) == false)
             {
