--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -296,7 +296,7 @@
                 juegosUsuarioGog = Herramientas.Listados.Generar(usuario.GogGames);
             }
 
-            usuarioPatreon = Herramientas.Patreon.VerificarComprobacion(usuario.PatreonLastCheck);
+            usuarioPatreon = Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck);
         }
 
         //--------------------------------------------------------------------
