--- a/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
@@ -39,7 +39,7 @@
 
 		if (usuario != null)
 		{
-			if ((usuario?.PatreonCoins != null && Herramientas.Patreon.VerificarComprobacion(usuario.PatreonLastCheck) == true) || BaseDatos.Usuarios.Buscar.RolDios(usuarioId) == true)
+			if ((usuario?.PatreonCoins != null && Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck) == true) || BaseDatos.Usuarios.Buscar.RolDios(usuarioId) == true)
 			{
 				aptoRegistro = true;
 			}
@@ -132,7 +132,7 @@
 
 									if (usuario != null)
 									{
-										if ((usuario?.PatreonCoins != null && Herramientas.Patreon.VerificarComprobacion(usuario.PatreonLastCheck) == true) || BaseDatos.Usuarios.Buscar.RolDios(usuarioId) == true)
+										if ((usuario?.PatreonCoins != null && Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck) == true) || BaseDatos.Usuarios.Buscar.RolDios(usuarioId) == true)
 										{
 											aptoPoderComprar = true;
 										}
