--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -421,7 +421,7 @@ else
                 juegosUsuarioGog = Herramientas.Listados.Generar(usuario.GogGames);
             }
 
-            usuarioPatreon = Herramientas.Patreon.VerificarComprobacion(usuario.PatreonLastCheck);
+            usuarioPatreon = Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck);
         }
 
         //--------------------------------------------------------------------
